[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "logic-tools"
authors = [
  { name = "Yusuke Matsunaga", email = "yusuke.matsunaga2010@gmail.com" },
]
description = "Logic tools"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "graphviz",
  "dot2tex"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dynamic = ["version"]

# バージョンの自動生成
[tool.hatch.version]
source = "vcs"
build.hooks.vcs.version-file = "logictools/version.py"
